# BattleCity2

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  config.h.in
.github/workflows/: BuildAndTest.yml  cmake.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
docs/: uml.plantuml
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
src/: Animation.h  Animation.hpp  AnimationHandler.hpp  Bonus.h  Bonus.hpp  BonusHandler.hpp  Bullet.hpp  CMakeLists.txt  Category.h  Commands.hpp  Definitions.hpp  Eagle.hpp  EnemyControlUnit.hpp  Entity.h  Entity.hpp  Enums.hpp  FontHolder.hpp  Game.h  Game.hpp  InputHandler.hpp  Map.h  Map.hpp  OptionsHandler.hpp  Player.h  Player.hpp  ResourceHolder.h  ResourceHolder.hpp  RightPanel.h  RightPanel.hpp  SpriteCoords.hpp  SpriteHolder.hpp  Tank.h  Tank.hpp  main.cpp
src/ResourceHolders/: FontHolder.hpp  ResourceHolder.hpp  SpriteHolder.hpp  TextHolder.hpp  TexturesHolder.h
src/ResourceHolders/private/: FontHolder.cpp  SpriteHolder.cpp  TextHolder.cpp  TexturesHolder.cpp
src/Utils/: CMakeLists.txt  Utils.hpp
src/Utils/private/: Utils.cpp
src/private/: Animation.cpp  AnimationHandler.cpp  Bonus.cpp  BonusHandler.cpp  Bullet.cpp  Commands.cpp  Eagle.cpp  EnemyControlUnit.cpp  Entity.cpp  Enums.cpp  FontHolder.cpp  Game.cpp  InputHandler.cpp  Map.cpp  Player.cpp  ResourceHolder.cpp  RightPanel.cpp  SpriteHolder.cpp  Tank.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
